welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:22: error: not found: value vrouuu
var c:String=vrouuu;
             ^SlugSnail:31: error: type mismatch;
 found   : java.awt.Color
 required: String
        c=getCouleurSol()
                       ^